test/conformance/kuttl/sample/standard/01-manifests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-replica-count
spec:
  validationFailureAction: enforce
  rules:
    - name: validate-replica-count
      match:
        any:
        - resources:
            kinds:
            - Deployment
      validate:
        message: "Replica count for a Deployment must be greater than or equal to 2."
        pattern:
          spec:
            replicas: "2-4"
