test/conformance/kuttl/sample/standard/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-replica-count
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
